# swarmcpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  test-by-spec.sh  test-headers.sh  test.sh
include/: 64x64.h  frame.h  op.h  slice.h  spec.h  stamp.h  swarm.h  uid.h  value.h
test/: 64x64.cpp  op.cpp  spec.cpp  stamp.cpp
